@startuml
skinparam classAttributeIconSize 0

package "com.uees.tutorias.domain" {
  abstract class Usuario {
    - id: String
    - nombre: String
    - correo: String
    - celular: String
    + getId(): String
    + getNombre(): String
    + getCorreo(): String
    + getCelular(): String
  }

  enum EstadoReserva {
    PENDIENTE
    CONFIRMADA
    CANCELADA
    REALIZADA
  }

  class Estudiante {
    - matricula: String
    + getMatricula(): String
  }

  class Docente {
    - departamento: String
    + getDepartamento(): String
  }

  class Asignatura {
    - id: String
    - codigo: String
    - nombre: String
    + getId(): String
    + getCodigo(): String
    + getNombre(): String
  }

  class HorarioTutoria {
    - id: String
    - docente: Docente
    - asignatura: Asignatura
    - fechaHoraInicio: LocalDateTime
    - fechaHoraFin: LocalDateTime
    - disponible: boolean
    + estaDisponible(): boolean
    + ocuparHorario(): void
    + liberarHorario(): void
    + getId(): String
    + getDocente(): Docente
    + getAsignatura(): Asignatura
    + getFechaHoraInicio(): LocalDateTime
    + getFechaHoraFin(): LocalDateTime
  }

  class Reserva {
    - id: String
    - estudiante: Estudiante
    - horario: HorarioTutoria
    - estado: EstadoReserva
    - fechaCreacion: LocalDateTime
    + confirmar(): void
    + cancelar(): void
    + marcarComoRealizada(): void
    + getId(): String
    + getEstudiante(): Estudiante
    + getHorario(): HorarioTutoria
    + getEstado(): EstadoReserva
    + getFechaCreacion(): LocalDateTime
  }
}

package "com.uees.tutorias.factory" {
  interface Notificador {
    + enviarNotificacion(destinatario: String, asunto: String, cuerpo: String): void
  }

  class NotificadorEmail {
    + enviarNotificacion(destinatario: String, asunto: String, cuerpo: String): void
  }

  class NotificadorWhatsApp {
    + enviarNotificacion(destinatario: String, asunto: String, cuerpo: String): void
  }

  class NotificadorSms {
    + enviarNotificacion(destinatario: String, asunto: String, cuerpo: String): void
  }
}

package "com.uees.tutorias.usecase" {
  interface RepositorioReservas {
    + guardar(reserva: Reserva): void
    + buscarPorId(id: String): Optional<Reserva>
    + actualizar(reserva: Reserva): void
  }

  class ServicioReservas {
    - repositorioReservas: RepositorioReservas
    - notificador: Notificador
    + crearReserva(idReserva: String, estudiante: Estudiante, horario: HorarioTutoria): Reserva
    + cancelarReserva(idReserva: String): void
  }
}

package "com.uees.tutorias.infrastructure" {
  class RepositorioReservas {
    + guardar(reserva: Reserva): void
    + buscarPorId(id: String): Optional<Reserva>
    + actualizar(reserva: Reserva): void
  }
}

' Herencia de Dominio
Usuario <|-- Estudiante
Usuario <|-- Docente

' Relaciones entre clases del Dominio
HorarioTutoria "1" *-- "1" Docente
HorarioTutoria "1" *-- "1" Asignatura
Reserva "1" *-- "1" Estudiante
Reserva "1" *-- "1" HorarioTutoria
Reserva "1" --> "1" EstadoReserva

' Relaciones de la capa de Casos de Uso
ServicioReservas --> RepositorioReservas
ServicioReservas ..> Reserva : usa

' Implementaciones de Infraestructura (Principio de Inversión de Dependencias - DIP)
RepositorioReservas ..|> RepositorioReservas
NotificadorEmail ..|> Notificador
NotificadorWhatsApp ..|> Notificador
NotificadorSms ..|> Notificador

@enduml